Add test fixture for faking daemon logs