@@ -16,13 +16,14 @@
 
 package org.gradle.testkit.runner
 
-
+import org.gradle.integtests.fixtures.daemon.FakeDaemonLog
 import org.gradle.test.precondition.Requires
 import org.gradle.test.preconditions.UnitTestPreconditions
 import org.gradle.tooling.GradleConnectionException
 import org.gradle.util.GradleVersion
 
 class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
+    private final FakeDaemonLog daemonLog = new FakeDaemonLog(daemonsFixture)
 
     def setup() {
         //these meta tests mess with the daemon log: do not interfere with other tests when running in parallel
@@ -54,7 +55,7 @@ class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
         iteration++
 
         when:
-        logToFakeDaemonLog('java.net.SocketException: Socket operation on nonsocket: no further information')
+        daemonLog.logException('java.net.SocketException: Socket operation on nonsocket: no further information')
         throwWhen(new IOException("Could not dispatch a message to the daemon.",
             new IOException("Some exception in the chain",
                 new IOException("An existing connection was forcibly closed by the remote host"))), iteration == 1)
@@ -69,7 +70,7 @@ class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
         iteration++
 
         when:
-        logToFakeDaemonLog('java.net.SocketException: Socket operation on nonsocket: no further information')
+        daemonLog.logException('java.net.SocketException: Socket operation on nonsocket: no further information')
         throwWhen(new IOException("Could not dispatch a message to the daemon.", new IOException("An existing connection was forcibly closed by the remote host")), iteration == 1)
 
         then:
@@ -87,7 +88,7 @@ class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
         iteration++
 
         when:
-        logToFakeDaemonLog('java.net.SocketException: Socket operation on nonsocket: no further information')
+        daemonLog.logException('java.net.SocketException: Socket operation on nonsocket: no further information')
         throwWhen(new IOException("Could not dispatch a message to the daemon.", new IOException("A different cause")), iteration == 1)
 
         then:
@@ -105,7 +106,7 @@ class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
         iteration++
 
         when:
-        logToFakeDaemonLog("Caused by: java.net.SocketException: Something else")
+        daemonLog.logException("Caused by: java.net.SocketException: Something else")
         throwWhen(new IOException("Could not dispatch a message to the daemon.", new IOException("An existing connection was forcibly closed by the remote host")), iteration == 1)
 
         then:
@@ -117,13 +118,5 @@ class GradleRunnerRetryTest extends BaseGradleRunnerIntegrationTest {
         if (condition) {
             throw throwable
         }
-    }
-
-    private void logToFakeDaemonLog(String exceptionInDaemon) {
-        def logDir = new File(daemonsFixture.daemonBaseDir, daemonsFixture.getVersion())
-        logDir.mkdirs()
-        def log = new File(logDir, "daemon-fake.log")
-        log << "DefaultDaemonContext[uid=40b63fc1-2506-4fa8-bf48-1bfbfc6a457f,javaHome=/home/mlopatkin/.asdf/installs/java/temurin-11.0.16+101,javaVersion=11,javaVendor=Oracle Corporation,daemonRegistryDir=/home/mlopatkin/gradle/local/.gradle/daemon,pid=1234,idleTimeout=1000,priority=NORMAL,applyInstrumentationAgent=true,nativeServicesMode=NOT_SET,daemonOpts=--add-opens=java.base/java.util=ALL-UNNAMED,-Xms256m,-Duser.language=en,-Duser.variant]\n"
-        log << exceptionInDaemon
     }
 }
